finish up header content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,6 +135,79 @@ nav {
     color:var(--text-dark)
 }
 
+header{
+    padding-top:5rem ;
+    padding-inline:1rem;
+    margin-bottom: 5rem;
+    overflow: hidden;
+}
+
+.header_container{
+    padding:0;
+    max-width:calc(var(--max-width)-2rem);
+    display: grid;
+    background-color: var(--extra-light);
+    border-radius: 2rem;
+}
+
+.header_content {
+    padding: 5rem 2rem;
+}
+
+.header_content h1 {
+    margin-bottom: 1rem;
+    font-size: 4rem;
+    font-weight: 900;
+    line-height: 5.5rem;
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.header_content h1 span {
+    position: relative;
+    isolation: isolate;
+}
+
+.header_content h1 span::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: -1rem;
+    height: 100%;
+    width: calc(100% + 4rem);
+    transform: rotate(-2deg);
+    z-index: -1;
+}
+.header_content h1 span:nth-child(1)::before{
+    background-color: white;
+}
+.header_content h1 span:nth-child(4)::before{
+    background-color: var(--primary-color);
+}
+
+.header_content p{
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.header_btns{
+    text-align: center;
+}
+
+.header_image img {
+    max-width:500px;
+    margin-inline: auto;
+}
+
+@media (width > 540px) {
+    .header_content h1 {
+        font-size: 5rem;
+        line-height: 6.5rem;
+    }
+}
 @media (width > 768px){
     nav{
         position: static;
@@ -178,5 +251,33 @@ nav {
 
     .nav_links a:hover{
         color: var(--primary-color);
+    }
+    header{
+        padding-top: 0;
+    }
+
+    .header_container {
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        isolation: isolate;
+    }
+
+    .header_content :is(h1, p, .header_btns){
+        text-align: left;
+    }
+
+    .header_image{
+        position:relative;
+        height: 100%;
+    }
+
+    .header_image img{
+        position: absolute;
+        width:unset;
+        max-width: unset;
+        height: 100%;
+        right: 1rem;
+        top: 2rem;
+        z-index: -1;
     }
 }
